--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/xlf/Resources.zh-Hans.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/xlf/Resources.zh-Hans.xlf
@@ -23,8 +23,8 @@
         <note>Indicates that a diagnostic (i.e. a compiler warning) should be kept as a warning rather than disabled or promoted to an error.</note>
       </trans-unit>
       <trans-unit id="FUTDC_AccelerationDataMissingForProject_1">
-        <source>Build acceleration data is unavailable for project with target '{0}'.</source>
-        <target state="translated">对于目标为“{0}”的项目，生成加速数据不可用。</target>
+        <source>Build acceleration data is unavailable for project with target '{0}'. See https://aka.ms/vs-build-acceleration.</source>
+        <target state="needs-review-translation">对于目标为“{0}”的项目，生成加速数据不可用。</target>
         <note>{0} is a file path.</note>
       </trans-unit>
       <trans-unit id="FUTDC_CheckingCopyItemsForProject_1">
@@ -33,8 +33,8 @@
         <note>{0} is a file path.</note>
       </trans-unit>
       <trans-unit id="FUTD_AccelerationCandidate">
-        <source>This project appears to be a candidate for build acceleration. To opt in, set the 'AccelerateBuildsInVisualStudio' MSBuild property to 'true'.</source>
-        <target state="translated">此项目似乎是生成加速的候选项。若要选择加入，请将“AccelerateBuildsInVisualStudio”MSBuild 属性设置为“true”。</target>
+        <source>This project appears to be a candidate for build acceleration. To opt in, set the 'AccelerateBuildsInVisualStudio' MSBuild property to 'true'. See https://aka.ms/vs-build-acceleration.</source>
+        <target state="needs-review-translation">此项目似乎是生成加速的候选项。若要选择加入，请将“AccelerateBuildsInVisualStudio”MSBuild 属性设置为“true”。</target>
         <note>Do not translate 'AccelerateBuildsInVisualStudio' or 'true'.</note>
       </trans-unit>
       <trans-unit id="FUTD_AccelerationDisabledCopyItemsIncomplete">
@@ -43,8 +43,8 @@
         <note />
       </trans-unit>
       <trans-unit id="FUTD_AccelerationDisabledForProject">
-        <source>Build acceleration is disabled for this project via the 'AccelerateBuildsInVisualStudio' MSBuild property.</source>
-        <target state="translated">通过“AccelerateBuildsInVisualStudio”MSBuild 属性禁用此项目的生成加速。</target>
+        <source>Build acceleration is disabled for this project via the 'AccelerateBuildsInVisualStudio' MSBuild property. See https://aka.ms/vs-build-acceleration.</source>
+        <target state="needs-review-translation">通过“AccelerateBuildsInVisualStudio”MSBuild 属性禁用此项目的生成加速。</target>
         <note>Do not translate AccelerateBuildsInVisualStudio.</note>
       </trans-unit>
       <trans-unit id="FUTD_AddingInputReferenceCopyMarkers">
@@ -178,8 +178,8 @@
         <note>Do not translate CopyToOutputDirectory="Always". {0} and {3} are file paths. {1} and {4} are date times. {2} and {5} are byte counts.</note>
       </trans-unit>
       <trans-unit id="FUTD_CopyingFilesToAccelerateBuild_1">
-        <source>Copying {0} files to accelerate build:</source>
-        <target state="translated">正在复制 {0} 文件以加速生成:</target>
+        <source>Copying {0} files to accelerate build (https://aka.ms/vs-build-acceleration):</source>
+        <target state="needs-review-translation">正在复制 {0} 文件以加速生成:</target>
         <note>{0} is an integer.</note>
       </trans-unit>
       <trans-unit id="FUTD_CriticalBuildTasksRunning">
