Enforcing code style on build is no longer experimental
See https://github.com/dotnet/roslyn/issues/66788

--- a/src/Microsoft.VisualStudio.Editors/PropPages/CodeAnalysisPropPage.resx
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/CodeAnalysisPropPage.resx
@@ -136,7 +136,7 @@
     <value>5</value>
   </data>
   <data name="EnforceCodeStyleInBuildCheckBox.Text" xml:space="preserve">
-    <value>Enforce CodeStyle on build (experimental)</value>
+    <value>Enforce CodeStyle on build</value>
   </data>
   <data name="&gt;&gt;EnforceCodeStyleInBuildCheckBox.Name" xml:space="preserve">
     <value>EnforceCodeStyleInBuildCheckBox</value>
