--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ja.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ja.xlf
@@ -33,8 +33,8 @@
         <note />
       </trans-unit>
       <trans-unit id="EnforceCodeStyleInBuildCheckBox.Text">
-        <source>Enforce CodeStyle on build (experimental)</source>
-        <target state="translated">ビルド時に CodeStyle を適用する (試験段階)</target>
+        <source>Enforce CodeStyle on build</source>
+        <target state="needs-review-translation">ビルド時に CodeStyle を適用する (試験段階)</target>
         <note />
       </trans-unit>
       <trans-unit id="Label1.Text">
