--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ko.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ko.xlf
@@ -33,8 +33,8 @@
         <note />
       </trans-unit>
       <trans-unit id="EnforceCodeStyleInBuildCheckBox.Text">
-        <source>Enforce CodeStyle on build (experimental)</source>
-        <target state="translated">빌드에 CodeStyle 적용(실험적 기능)</target>
+        <source>Enforce CodeStyle on build</source>
+        <target state="needs-review-translation">빌드에 CodeStyle 적용(실험적 기능)</target>
         <note />
       </trans-unit>
       <trans-unit id="Label1.Text">
