--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ru.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.ru.xlf
@@ -33,8 +33,8 @@
         <note />
       </trans-unit>
       <trans-unit id="EnforceCodeStyleInBuildCheckBox.Text">
-        <source>Enforce CodeStyle on build (experimental)</source>
-        <target state="translated">Принудительное применение CodeStyle во время сборки (экспериментальная функция)</target>
+        <source>Enforce CodeStyle on build</source>
+        <target state="needs-review-translation">Принудительное применение CodeStyle во время сборки (экспериментальная функция)</target>
         <note />
       </trans-unit>
       <trans-unit id="Label1.Text">
