--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.tr.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.tr.xlf
@@ -33,8 +33,8 @@
         <note />
       </trans-unit>
       <trans-unit id="EnforceCodeStyleInBuildCheckBox.Text">
-        <source>Enforce CodeStyle on build (experimental)</source>
-        <target state="translated">Derlemede CodeStyle'ı zorla (deneysel)</target>
+        <source>Enforce CodeStyle on build</source>
+        <target state="needs-review-translation">Derlemede CodeStyle'ı zorla (deneysel)</target>
         <note />
       </trans-unit>
       <trans-unit id="Label1.Text">
