--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.zh-Hans.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/CodeAnalysisPropPage.zh-Hans.xlf
@@ -33,8 +33,8 @@
         <note />
       </trans-unit>
       <trans-unit id="EnforceCodeStyleInBuildCheckBox.Text">
-        <source>Enforce CodeStyle on build (experimental)</source>
-        <target state="translated">在生成上强制实施代码样式(实验性)</target>
+        <source>Enforce CodeStyle on build</source>
+        <target state="needs-review-translation">在生成上强制实施代码样式(实验性)</target>
         <note />
       </trans-unit>
       <trans-unit id="Label1.Text">
