--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/CodeAnalysisPropertyPage.xaml.fr.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/CodeAnalysisPropertyPage.xaml.fr.xlf
@@ -18,8 +18,8 @@
         <note />
       </trans-unit>
       <trans-unit id="BoolProperty|EnforceCodeStyleInBuild|DisplayName">
-        <source>Enforce code style on build (experimental)</source>
-        <target state="translated">Appliquer le style de code lors de la génération (expérimental)</target>
+        <source>Enforce code style on build</source>
+        <target state="needs-review-translation">Appliquer le style de code lors de la génération (expérimental)</target>
         <note />
       </trans-unit>
       <trans-unit id="BoolProperty|RunAnalyzersDuringBuild|Description">
