--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/CodeAnalysisPropertyPage.xaml.zh-Hant.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/CodeAnalysisPropertyPage.xaml.zh-Hant.xlf
@@ -18,8 +18,8 @@
         <note />
       </trans-unit>
       <trans-unit id="BoolProperty|EnforceCodeStyleInBuild|DisplayName">
-        <source>Enforce code style on build (experimental)</source>
-        <target state="translated">在組建上強制執行程式碼分析 (實驗性)</target>
+        <source>Enforce code style on build</source>
+        <target state="needs-review-translation">在組建上強制執行程式碼分析 (實驗性)</target>
         <note />
       </trans-unit>
       <trans-unit id="BoolProperty|RunAnalyzersDuringBuild|Description">
