Text-wrap by default for command line arguments (#8893)
* text wrap launch profile command line arguments

* Document new metadata property

* Update docs/repo/property-pages/property-specification.md

Co-authored-by: Drew Noakes <git@drewnoakes.com>

* Update ExecutableDebugPropertyPage.xaml CommandLineArguments property to multilnie

* Update XLF

---------

Co-authored-by: Drew Noakes <git@drewnoakes.com>

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ExecutableDebugPropertyPage.xaml.de.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ExecutableDebugPropertyPage.xaml.de.xlf
@@ -63,8 +63,8 @@
         <note />
       </trans-unit>
       <trans-unit id="StringProperty|CommandLineArguments|Description">
-        <source>Command line arguments to pass to the executable.</source>
-        <target state="translated">Befehlszeilenargumente, die an die ausführbare Datei übergeben werden sollen.</target>
+        <source>Command line arguments to pass to the executable. You may break arguments into multiple lines.</source>
+        <target state="needs-review-translation">Befehlszeilenargumente, die an die ausführbare Datei übergeben werden sollen.</target>
         <note />
       </trans-unit>
       <trans-unit id="StringProperty|CommandLineArguments|DisplayName">
