--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/Resources.resx
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/Resources.resx
@@ -480,9 +480,10 @@ This project was loaded using the wrong project type, likely as a result of rena
   </data>
   <data name="Restore_PropertyWithInconsistentValues" xml:space="preserve">
     <value>The value of the '{0}' property is inconsistent between target frameworks. This property must be identical for NuGet restore to function correctly. The value '{1}' from the '{2}' configuration will be used, other target frameworks may fail to pick NuGet assets.</value>
+    <comment>{0} is a file path.</comment>
   </data>
   <data name="Restore_NuGetCycleDetected" xml:space="preserve">
-    <value>A circular dependency A -&gt; B -&gt; A was detected during NuGet Restore which caused NuGet to stop restoring.
-Because the NuGet restore didn't finish correctly, the project might be in a bad state.</value>
+    <value>A NuGet restore loop has been detected in project '{0}'. Further restores have been aborted. The project might be in a bad state.</value>
+    <comment>{0} is a file path.</comment>
   </data>
 </root>
