--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/xlf/Resources.tr.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/xlf/Resources.tr.xlf
@@ -474,16 +474,14 @@ Bu proje, muhtemelen proje uzantısının Visual Studio dışında yeniden adlan
         <note />
       </trans-unit>
       <trans-unit id="Restore_NuGetCycleDetected">
-        <source>A circular dependency A -&gt; B -&gt; A was detected during NuGet Restore which caused NuGet to stop restoring.
-Because the NuGet restore didn't finish correctly, the project might be in a bad state.</source>
-        <target state="translated">NuGet Geri Yükleme sırasında NuGet'in geri yükleme işlemini durdurmasına neden olan bir döngüsel bağımlılık A -&gt; B -&gt; A algılandı.
-NuGet geri yüklemesi doğru şekilde tamamlanmadığından proje kötü bir durumda olabilir.</target>
-        <note />
+        <source>A NuGet restore loop has been detected in project '{0}'. Further restores have been aborted. The project might be in a bad state.</source>
+        <target state="new">A NuGet restore loop has been detected in project '{0}'. Further restores have been aborted. The project might be in a bad state.</target>
+        <note>{0} is a file path.</note>
       </trans-unit>
       <trans-unit id="Restore_PropertyWithInconsistentValues">
         <source>The value of the '{0}' property is inconsistent between target frameworks. This property must be identical for NuGet restore to function correctly. The value '{1}' from the '{2}' configuration will be used, other target frameworks may fail to pick NuGet assets.</source>
-        <target state="translated">'{0}' özelliğinin değeri hedef framework'ler arasında tutarlı değil. Bu özellik, NuGet geri yüklemenin düzgün çalışması için özdeş olmalıdır. '{2}' yapılandırmasından '{1}' değeri kullanılacak, diğer hedef framework'ler NuGet varlıklarını alamayabilir.</target>
-        <note />
+        <target state="needs-review-translation">'{0}' özelliğinin değeri hedef framework'ler arasında tutarlı değil. Bu özellik, NuGet geri yüklemenin düzgün çalışması için özdeş olmalıdır. '{2}' yapılandırmasından '{1}' değeri kullanılacak, diğer hedef framework'ler NuGet varlıklarını alamayabilir.</target>
+        <note>{0} is a file path.</note>
       </trans-unit>
       <trans-unit id="SdkNodeName">
         <source>SDK</source>
